--- a/oldwomansgame.ipynb
+++ b/oldwomansgame.ipynb
@@ -63,7 +63,7 @@
    "source": [
     "%matplotlib tk\n",
     "from owg_board import owg\n",
-    "from owg_players import jb, cientista, cientista_sovina"
+    "from owg_players import jb, cientista, cientista_sovina, cientista_cauteloso, miope"
    ]
   },
   {
@@ -79,8 +79,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p1 = cientista()\n",
-    "p2 = jb()"
+    "p1 = cientista_cauteloso()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p2 = cientista_cauteloso()"
    ]
   },
   {
@@ -92,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,11 +119,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100000/100000 [10:08<00:00, 164.35it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from tqdm import tqdm \n",
     "\n",
@@ -130,7 +146,7 @@
     "pjog2 = []\n",
     "\n",
     "# Número de jogos para treinar\n",
-    "n = 10000\n",
+    "n = 100000\n",
     "\n",
     "for i in tqdm(range(n)):\n",
     "    \n",
@@ -205,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,8 +245,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import pickle\n",
     "with open('job1m.pkl', 'wb') as arq:\n",
@@ -250,15 +268,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O ganhou\n",
-      "O ganhou\n"
+      "Empate\n",
+      "Empate\n",
+      "X ganhou\n",
+      "Empate\n",
+      "X ganhou\n"
      ]
     }
    ],
