--- a/oldwomansgame.ipynb
+++ b/oldwomansgame.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,13 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p1 = epsilon_edson(desconto = 0.9, epsilon = 0.1, nome = 'epsilon_edson_1MM')\n",
+    "p1 = epsilon_edson(desconto = 0.9, epsilon = 0.5, nome = 'epsilon_edson_1MM')\n",
     "\n",
-    "p2 = epsilon_edson(desconto = 0.9, epsilon = 0.1)"
+    "p2 = epsilon_edson(desconto = 0.9, epsilon = 0.5)"
    ]
   },
   {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -151,7 +151,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:01<00:00, 626.64it/s]\n"
+      "100%|██████████| 1000/1000 [00:01<00:00, 636.80it/s]\n"
      ]
     }
    ],
@@ -237,8 +237,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "plt.figure(figsize = (20, 10))\n",
@@ -256,37 +258,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analisando aprendizagem do jogador"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X ganhou\n"
-     ]
-    }
-   ],
-   "source": [
-    "tab = owg()\n",
-    "tab.start_free(p1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Carregando os jogadores pré-treinados"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import pickle\n",
     "with open('cientista_1MM.pkl', 'rb') as arq:\n",
@@ -298,15 +277,27 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jogar contra quem?\n",
-    "\n",
-    "p = p1\n",
-    "p.reset()\n",
+    "### Analisando aprendizagem do jogador"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tab = owg()\n",
-    "tab.start(p)"
+    "tab.start_free(p2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Jogar contra"
    ]
   },
   {
@@ -314,21 +305,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Jogar contra quem?\n",
+    "p = p1\n",
+    "p.reset()\n",
+    "tab = owg()\n",
+    "tab.start(p)"
+   ]
   }
  ],
  "metadata": {
