Arrumando documentação. Finalizando para primeira versão open.

--- a/oldwomansgame.ipynb
+++ b/oldwomansgame.ipynb
@@ -4,73 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aprendizagem por reforço: jogo da velha\n",
-    "\n",
-    " Número de posições possíveis com pelo menos duas casas livres = $3^7 \\times 72 = 157.464$ (número de possibilidades para um tabuleiro com $7$ casas, e $3$ possibilidades por casa - O, X e vazio - vezes o número de maneiras possíveis de escolher as duas casas livres)\n",
-    " \n",
-    "## Método $\\epsilon$-greedy\n",
-    "\n",
-    "Confrontado com uma posição do tabuleiro, o robô escolhe o movimento com maior recompensa estimada até o momento. Para permitir alguma exploração das possibilidades, com probabilidade $\\epsilon$ o robô escolhe uma posição aleatoriamente.\n",
-    "\n",
-    "Esta estratégia é implementada pelo jogador *epsilon_edson*\n",
-    " \n",
-    "## Modelo Beta-Binomial\n",
-    "\n",
-    "Para uma certa posição $x$, com $k(x)$ casas livres, tenho $n(x)$ ações possíveis. A partir de agora, vou ignorar o $x$, mantendo sempre em mente que teremos um modelo desses abaixo para cada uma das $157.464$ posições.\n",
-    "\n",
-    "Para cada uma das $k$ ações possíveis, defino uma probabilidade $\\pi(i)$: a probabilidade de vitória caso o jogador escolha a a ação $i$ ($i=1,...k$)\n",
-    "\n",
-    "Observo $n_i$ jogos começando da mesma posição, e escolho sempre a ação $i$. Conto o número de vitórias $v_i$. Repito isso para todas as $k$ posições; ou seja, observo $(v_i, n_i)$ para $i=1,...,k$.  \n",
-    "\n",
-    "Supondo que conheço as probabilidades $\\pi(i)$, a probabilidade associada ao número de jogos e vitórias observadas (a verossimilhança) é uma binomial:\n",
-    "\n",
-    "$P(v_i | n_i, \\pi(i)) \\propto \\pi(i)^{v_i}(1-\\pi(i))^{n_i-v_i}$\n",
-    "\n",
-    "Considerando agora todas as posições, e supondo que os resultados dos jogos são independentes (condicionalmente a $\\pi$), temos a verossimilhança conjunta de todas as posições:\n",
-    "\n",
-    "$P(\\mathbf{v} | \\mathbf{n}, \\mathbf{\\pi}) \\propto \\prod_{i=1}^k \\pi(i)^{v_i}(1-\\pi(i))^{n_i-v_i}$\n",
-    "\n",
-    "Como não conheço $\\pi$, vou modelar minha ignorância usando uma distribuição de probabilidade para esses valores (uma priori). Por questões matemáticas, escolho uma distribuição Beta para cada possível ação:\n",
-    "\n",
-    "$P(\\pi(i)) \\propto \\pi(i)^{\\alpha_i - 1}(1-\\pi(i))^{\\beta_i-1}$\n",
-    "\n",
-    "Onde $\\alpha_i$ e $\\beta_i$ são hiperparâmetros que vamos precisar escolher (em lugar de aprender seus valores). \n",
-    "\n",
-    "### Aprendizagem e o teorema de Bayes\n",
-    "\n",
-    "Eu começo então dizendo que a probabilidade de vitória do movimento $i$ tem distribuição a priori Beta com hiperparâmetros $\\alpha_i$ e $\\beta_i$; jogo uma vez e escolho o movimento $i$. Como incorporo essa nova informação?\n",
-    "\n",
-    "Pelo teorema de Bayes, e usando a propriedade de conjugação entre priori Beta e verossimilhança binomial, sei que a nova distribuição de $\\pi(i)$ é de novo uma Beta, mas agora com parâmetros $(\\alpha_i + 1, \\beta_i)$ em caso de vitória, e $(\\alpha_i, \\beta_i+1)$ em caso de derrota. \n",
-    "\n",
-    "Portanto a equação de aprendizagem desse modelo, para cada posição $x$ e cada possível movimento $i_x$, é:\n",
-    "\n",
-    "$\\begin{align}\n",
-    "&\\alpha_i(t+1) = \\alpha_i(t) + r_i(t) \\\\\n",
-    "&\\beta_i(t+1) = \\beta_i(t) + (1-r_i(t))\n",
-    "\\end{align}$\n",
-    "\n",
-    "onde $r_i(t) = 1$ no caso de vitória, e $0$ caso contrário.\n",
-    "\n",
-    "Observação: agora temos uma interpretação para os hiperparâmetros $\\alpha$ e $\\beta$; eles representam quantas vitórias e quantas derrotas o robô viu até o momento em que começa a nova rodada de aprendizagem.\n",
-    "\n",
-    "### Decisão\n",
-    "\n",
-    "O robô chegou numa posição $x$ com diversas ações possíveis. Ele tem uma distribuição de probabilidade para a probabilidade de vitória (a probabilidade de uma probabilidade...) de cada lance. O que fazer?\n",
-    "\n",
-    "1. Olhar o valor esperado de probabilidade de vitória para cada movimento; escolher o movimento com maior valor esperado. Esta estratégia é implementada pelo jogador *cientista_sovina*\n",
-    "2. Sortear uma probabilidade de vitória para cada movimento, conforme a distribuição atual; escolher o movimento com maior valor sorteado. Esta estratégia é implementada pelo jogador *cientista*\n",
-    "\n",
-    "## Look-ahead\n",
-    "\n",
-    "As estratégias acima se baseiam somente na aprendizagem pura para obter uma política de jogo. Uma possibilidade de acelerar o aprendizado é incluir um *lookahead*, ou seja, avaliar o tabuleiro alguns passos adiante.\n",
-    "\n",
-    "O jogador *miope* implementa essa estratégia de forma única: joga aleatoriamente, a menos que no tabuleiro atual haja um movimento vencedor para qualquer um dos lados. Neste caso, ele joga o movimento vencedor (para ganhar o jogo ou impedir que o adversário ganhe).\n",
-    "\n",
-    "O jogador *cientista_cauteloso* inclui esse lookahead na estratégia do cientista.\n",
-    "\n",
-    "## Objetivo\n",
-    "\n",
-    "O jogador *cientista_conciliador* implementa a mesma política de aprendizagem do *cientista*, mas com uma função de recompensa diferente: este jogador quer aprender como **empatar** o jogo."
+    "# Aprendizagem por reforço: jogo da velha"
    ]
   },
   {
@@ -281,6 +215,13 @@
    "metadata": {},
    "source": [
     "### Analisando aprendizagem do jogador"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clique com o botão direito do mouse para exibir as ações possíveis e o valor estimado de cada uma delas de acordo com o jogador passado como argumento para a função"
    ]
   },
   {
